JLink Maven Plugin 1.3.0
* Added: --strip-native-commands
* Modified: use JSR-330 Inject annotation
* Modified: use org.slf4j.Logger